# game-of-life

./: .gitignore  README.md  setup.cfg
src/abstract/: gol_interface.py
src/cli/: cli.py
src/cli/start_field/: from_file.py  only_string.py  string_with_width.py
src/game_of_life/: api.py  factory.py  field.py
src/game_of_life/api/: app.py
src/game_of_life/cli/: arguments.py  cli.py
src/game_of_life/colony/: colony.py
src/game_of_life/gol/tests/: test_api.py  test_field.py
src/game_of_life/gol/tests/rules/: test_conway.py
src/game_of_life/tests/: test_api.py  test_field.py
src/game_of_life/tests/rules/: test_conway.py
src/gui/: gui.py
src/gui/draw/: canvas.py  ceil.py  grid.py
