[metadata]
name = lcolony
version = 0.1.2
author = Åukasz Bacik
author-email = mail@luka.sh
license = GPLv3
url = https://github.com/lbacik/game-of-life
requires-python = >=3.7
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir=
    =src
packages=find:
install_requires =
    simple_value_object

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    lcolony = game_of_life.cli.cli:run
